# RuCord

./: CMakeLists.txt
include/: connect.h  loginForm.h  mainWindow.h
src/: loginForm.cpp  main.cpp  mainWindow.cpp
ui/: loginForm.ui
